# clampd

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile.dev  Makefile  README.md  RELEASE_NOTES_v0.16.10.md  SECURITY.md  create-release.sh  docker-compose.deploy.yml  docker-compose.proxy.yml  docker-compose.trial.yml  docker-compose.yml  generate-license.sh  generate-tls.sh  install-guard.sh  install.sh  sync-to-public.sh
.github/workflows/: release.yml
.reuse/: dep5
LICENSES/: BUSL-1.1.txt  LicenseRef-Proprietary.txt
docker/: .env.example  docker-compose.control.yml  docker-compose.demo.yml  docker-compose.infra.yml  docker-compose.proxy.yml  mcp-proxy.Dockerfile  setup.sh
docker/services/: Dockerfile.service
examples/: a2a_attacks.py  langgraph_a2a.py
examples/sigma-rules/: command-injection.yml  data-exfiltration.yml  path-traversal.yml  prompt-injection.yml  sql-injection.yml  xss-attempt.yml
proto/agentguard/: common.proto  control.proto  intent.proto  kill.proto  policy.proto  registry.proto  risk.proto  token.proto
release/: .env.example  SHA256SUMS.txt  docker-compose.control.yml  docker-compose.proxy.yml  setup.sh
sdk/python/: README.md  pyproject.toml
sdk/python/clampd/: __init__.py  _guardrails.py  auth.py  client.py  crewai_callback.py  delegation.py  langchain_callback.py  mcp_config_example.json  mcp_server.py  stream_guard.py  tool_verify.py
sdk/python/examples/: 01_guard.py  07_a2a_workflow.py  08_github_models.py  mock_gateway.py  test_real_gateway.py
sdk/python/tests/: conftest.py  run_e2e.sh  test_a2a_e2e.py  test_a2a_workflow_auto.py  test_api.py  test_auth.py  test_circuit_breaker.py  test_client.py  test_crewai.py  test_critical_fixes.py  test_delegation.py  test_features_e2e.py  test_fresh_account_e2e.py  test_full_workflow_e2e.py  test_mcp_delegation.py  test_scan.py  test_schema_injection.py  test_stream_guard.py  test_tool_verify.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: 01-guard.ts  02-openai.ts  03-anthropic.ts  04-adk.ts  05-vercel-ai.ts  06-schema-injection.ts  07-a2a-workflow.ts  08-github-models.ts  mock-gateway.ts  test-real-gateway.ts  usage.ts
sdk/typescript/mcp-proxy/: README.md  fleet.example.json  package-lock.json  package.json
sdk/typescript/mcp-proxy/src/: dashboard.ts  fleet.ts  index.ts  interceptor.ts  logger.ts  mock-server.ts  proxy.ts
sdk/typescript/src/: auth.ts  client.ts  config.ts  delegation.ts  guardrails.ts  index.ts  interceptor.ts  langchain.ts  mcp-cli.ts  mcp-server.ts  schema-injection.ts  stream-guard.ts  tool-verify.ts
sdk/typescript/src/__tests__/: a2a-e2e.test.ts  adk-vercel.test.ts  api.test.ts  auth.test.ts  delegation.test.ts  (+7 more)
services/: Cargo.toml
services/crates/ag-common/: Cargo.toml
services/crates/ag-common/keys/: .gitignore  license_pub.pem
services/crates/ag-common/src/: activation.rs  auth.rs  categories.rs  config.rs  degradation.rs  errors.rs  fingerprint.rs  interceptor.rs  lib.rs  models.rs  normalizer.rs  scopes.rs  session.rs  telemetry.rs  tls.rs  tool_names.rs
services/crates/ag-control/: Cargo.toml
services/crates/ag-control/src/: health.rs  leader.rs  main.rs  poller.rs  service.rs
services/crates/ag-engine/: Cargo.toml
services/crates/ag-engine/src/: lib.rs
services/crates/ag-engine/src/compile/: conditions.rs  mod.rs
services/crates/ag-engine/src/compliance/: mod.rs
services/crates/ag-engine/src/dictionary/: mod.rs
services/crates/ag-engine/src/execute/: context.rs  mod.rs  pipeline.rs
services/crates/ag-engine/src/funnel/: decoders.rs  depth.rs  entropy.rs  magic.rs  mod.rs  yara.rs
services/crates/ag-engine/src/normalize/: mod.rs
services/crates/ag-engine/src/parse/: mod.rs  native.rs  portable.rs  sigma.rs
services/crates/ag-engine/src/scheme/: mod.rs  types.rs
services/crates/ag-engine/src/storage/: filesystem.rs  mod.rs
services/crates/ag-engine/src/taxonomy/: mod.rs
services/crates/ag-engine/src/testing/: corpus.rs  garak.rs  mod.rs
services/crates/ag-engine/src/versioning/: mod.rs
services/crates/ag-gateway/: Cargo.toml
services/crates/ag-gateway/src/: circuit_breaker.rs  delegation.rs  extractor.rs  main.rs  middleware.rs  proxy.rs  scan.rs  scope_token.rs  session.rs  shadow.rs
services/crates/ag-intent/: Cargo.toml
services/crates/ag-intent/src/: lib.rs  main.rs  service.rs
services/crates/ag-kill/: Cargo.toml
services/crates/ag-kill/src/: cascade.rs  main.rs  service.rs
services/crates/ag-policy/: Cargo.toml
services/crates/ag-policy/src/: decision.rs  lib.rs  main.rs  service.rs
services/crates/ag-proto/: Cargo.toml  build.rs
services/crates/ag-proto/src/: lib.rs
services/crates/ag-registry/: Cargo.toml
services/crates/ag-registry/src/: lifecycle.rs  main.rs  repository.rs  service.rs
services/crates/ag-risk/: Cargo.toml
services/crates/ag-risk/src/: baseline.rs  lib.rs  main.rs  scorer.rs  service.rs
services/crates/ag-shadow/: Cargo.toml
services/crates/ag-shadow/src/: consumer.rs  enricher.rs  main.rs
services/crates/ag-token/: Cargo.toml
services/crates/ag-token/src/: exchange.rs  lib.rs  main.rs  service.rs  signing.rs
services/crates/clampd-cli/: Cargo.toml
services/crates/clampd-cli/src/: config.rs  main.rs  output.rs  state.rs
services/crates/clampd-cli/src/commands/: agent.rs  apikey.rs  audit.rs  cluster.rs  compliance.rs  config_cmd.rs  context.rs  keyword.rs  kill.rs  license.rs  mod.rs  org.rs  policy.rs  risk.rs  test_suite.rs  token.rs  watch.rs  webhook.rs
src/ag-gateway/: Cargo.toml  circuit_breaker.rs  decision.rs  delegation.rs  extractor.rs  main.rs  metrics.rs  normalize.rs  otel.rs  proxy.rs  rate_limiter.rs  scope_token.rs  session.rs
src/ag-shadow/: consumer.rs  enricher.rs  lib.rs  main.rs  pii_masker.rs  writer.rs
src/clampd-guard/: Cargo.toml
src/clampd-guard/src/: auth.rs  config.rs  guard.rs  hook.rs  main.rs  scope.rs  sync.rs
src/clampd-guard/tests/: blackbox.rs
stubs/builtins/: mod.rs
stubs/signals/: mod.rs
video/: README.md
