[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
aho-corasick = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "json", "runtime-tokio", "tls-rustls", "migrate"] }
bb8 = "0.8"
bb8-redis = "0.17"
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp"] }
async-nats = "0.37"
dashmap = "6"
bytes = "1"
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
hyper = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
futures = "0.3"
futures-util = "0.3"
arc-swap = "1"
nom = "7"
regex-syntax = "0.8"
bitflags = { version = "2", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
