[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clampd"
version = "0.10.6"
description = "Runtime security SDK for AI agents - guard tool calls in 1 line"
license = {text = "Apache-2.0"}
authors = [{name = "Clampd", email = "mehul.soni89@gmail.com"}]
urls = {Homepage = "https://clampd.dev", Repository = "https://github.com/clampd/clampd"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["ai", "agents", "security", "proxy", "openai", "anthropic", "langchain", "crewai", "function-calling"]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0,<3.0"]
anthropic = ["anthropic>=0.20,<2.0"]
langchain = ["langchain-core>=0.3,<1.0"]
crewai = ["crewai>=0.80,<2.0"]
mcp = ["mcp>=1.0,<2.0"]
verify = ["cryptography>=41.0"]
all = ["openai>=1.0,<3.0", "anthropic>=0.20,<2.0", "langchain-core>=0.3,<1.0", "crewai>=0.80,<2.0", "mcp>=1.0,<2.0", "cryptography>=41.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "cryptography>=41.0",
]

[tool.hatch.build.targets.wheel]
packages = ["clampd"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "E402", "F841", "UP037"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]
"examples/**" = ["E402", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
