[package]
name = "ag-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["telemetry"]
db = ["sqlx"]
http-client = ["reqwest"]
normalizer = ["base64", "regex", "unicode-normalization"]
session = ["redis"]
license = ["jsonwebtoken", "reqwest"]
telemetry = ["tracing-subscriber"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tonic = { workspace = true }

# Feature-gated
jsonwebtoken = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
unicode-normalization = { version = "0.1", optional = true }
redis = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
rsa = { version = "0.9", features = ["sha2"] }
signature = "2.2"
