[package]
name = "ag-control"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ag-control"
path = "src/main.rs"

[dependencies]
ag-common = { path = "../ag-common", features = ["license"] }
ag-engine = { path = "../ag-engine" }
ag-license = { path = "../ag-license" }
ag-policy = { path = "../ag-policy" }
ag-proto = { path = "../ag-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = "0.2"
sqlx = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
