[package]
name = "ag-engine"
version = "0.1.0"
edition = "2021"
description = "Runtime rule engine for Clampd — tool-call security firewall"

[lib]
name = "ag_engine"
path = "src/lib.rs"

[features]
default = []
yara = ["yara-x"]
sigma = ["serde_yaml"]
redis-storage = ["redis", "bb8", "bb8-redis"]

[dependencies]
regex = { workspace = true }
aho-corasick = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = { workspace = true }
regex-syntax = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
memchr = "2"
toml = "0.8"
unicode-normalization = "0.1"
flate2 = "1"

# Feature-gated
yara-x = { version = "1.14", optional = true }
serde_yaml = { version = "0.9", optional = true }
redis = { workspace = true, optional = true }
bb8 = { workspace = true, optional = true }
bb8-redis = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
flate2 = "1"
ag-common = { path = "../ag-common" }
criterion = { version = "0.5", features = ["html_reports"] }
regex = { workspace = true }

[[bench]]
name = "evaluate"
harness = false

[[bench]]
name = "scale"
harness = false

[[bench]]
name = "stages"
harness = false

[[bench]]
name = "allocations"
harness = false
