[package]
name = "ag-intent"
version = "0.1.0"
edition = "2021"

[lib]
name = "ag_intent"
path = "src/lib.rs"

[[bin]]
name = "ag-intent"
path = "src/main.rs"

[dependencies]
ag-common = { path = "../ag-common" }
ag-engine = { path = "../ag-engine" }
ag-license = { path = "../ag-license" }
ag-policy = { path = "../ag-policy" }
ag-proto = { path = "../ag-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
arc-swap = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "classify"
harness = false
