[package]
name = "ag-kill"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ag-kill"
path = "src/main.rs"

[dependencies]
ag-common = { path = "../ag-common", features = ["db"] }
ag-license = { path = "../ag-license" }
ag-proto = { path = "../ag-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
sqlx = { workspace = true }
