[package]
name = "ag-registry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ag-registry"
path = "src/main.rs"

[dependencies]
ag-common = { path = "../ag-common", features = ["db"] }
ag-license = { path = "../ag-license" }
ag-proto = { path = "../ag-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
redis = { workspace = true }
async-nats = { workspace = true }
