[package]
name = "ag-risk"
version = "0.1.0"
edition = "2021"

[lib]
name = "ag_risk"
path = "src/lib.rs"

[[bin]]
name = "ag-risk"
path = "src/main.rs"

[dependencies]
ag-common = { path = "../ag-common" }
ag-license = { path = "../ag-license" }
ag-proto = { path = "../ag-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
async-nats = { workspace = true }
dashmap = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scoring"
harness = false
