[package]
name = "ag-token"
version = "0.1.0"
edition = "2021"

[lib]
name = "ag_token"
path = "src/lib.rs"

[[bin]]
name = "ag-token"
path = "src/main.rs"

[dependencies]
ag-common = { path = "../ag-common" }
ag-license = { path = "../ag-license" }
ag-proto = { path = "../ag-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
arc-swap = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
async-trait = "0.1"
